--- a/package.json
+++ b/package.json
@@ -18,17 +18,37 @@
     "test": "echo 'TODO'"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-confetti": "^6.0.1",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4"
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.8",
     "@types/node": "14.14.35",
-    "@types/react": "17.0.3",
+    "@types/react": "^17.0.11",
     "@types/react-dom": "17.0.2",
     "concurrently": "6.0.1",
     "create-serve": "1.0.1",
     "esbuild": "0.11.5",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
     "rimraf": "3.0.2",
     "typescript": "4.2.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn typecheck && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md,ts,tsx,json}": "prettier --write"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 120
   }
 }
