--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.4"
+    "react-dropzone": "^11.3.4",
+    "workbox-build": "^6.1.5"
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
